# test_gnap_schema

./: Cargo.toml  README.md  schema.json  test.json  test_invalid_resource.json
src/: main.rs
