[package]
name = "schema"
version = "0.1.0"
authors = ["Fabien <45664395+fimbault@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonschema = { git = "https://github.com/Stranger6667/jsonschema-rs", branch = "master"}
#jsonschema = "0.3"
serde_json = "1"

